# carsim-bridge-win

./: CMakeLists.txt  README.md  carsim-bridge.c  carsim-bridge.cpp  external.c  external.h
MessageManager/: CMakeLists.txt  MessageManager.cpp  MessageManager.h
common/: CMakeLists.txt  vs_api.h  vs_def_api.h  vs_deftypes.h  vs_get_api.c  vs_utility.c  vs_utility.h
lcm/: lcm_export.h
lcm/lib/: lcm-static.lib  lcm.exp  lcm.lib
msg/: simuCARSIM.zcm
msg/carsim/: CMakeLists.txt  ContactPoint.hpp  Control.hpp  QueryPoint.hpp  RoadContact.hpp  RoadQuery.hpp  State.hpp  carsim_ContactPoint.c  carsim_ContactPoint.h  carsim_Control.c  carsim_Control.h  carsim_QueryPoint.c  carsim_QueryPoint.h  carsim_RoadContact.c  carsim_RoadContact.h  carsim_RoadQuery.c  carsim_RoadQuery.h  carsim_State.c  carsim_State.h
